# nanodistill

./: configurator.py  generate_logprobs.py  model.py  pyproject.toml  train.py
config/: baseline_olmo.py  distill_olmo.py
data/fineweb_edu/: prepare.py
